--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "libs\\hamcrest-core-1.3.jar",
-        "libs\\junit-4.12.jar"
+        "libs\\junit-4.12.jar",
+        "libs/hamcrest-core-1.3.jar",
+        "libs/junit-4.12.jar"
     ]
 }
